--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <script defer src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"> </script>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css"/>
+        <title>Tribute Page </title>
     </head>
     <body>
-        <main></main>
+        <main>
+            <h1 id="title">Lorem ipsum</h1>
+        </main>
     </body>
-</html>
+</html> 
