--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <main>
             <h1 id="title">Lorem ipsum</h1>
+            <div id="img-div"></div>
         </main>
     </body>
 </html> 
