--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <body>
         <main>
             <h1 id="title">Lorem ipsum</h1>
-            <div id="img-div"></div>
+            <div id="img-div">
+                <img id="image">
+            </div>
         </main>
     </body>
 </html> 
