--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             <h1 id="title">Lorem ipsum</h1>
             <div id="img-div">
                 <img id="image">
+                <div id="img-caption">
+                    <a>image caption</a>
+                </div>
             </div>
         </main>
     </body>
