--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <main>
             <h1 id="title">Lorem ipsum</h1>
             <div id="img-div">
-                <img id="image">
+                <img id="image" src="https://dummyimage.com/600x400/000/fff.png&text=+">
                 <div id="img-caption">
                     <a>image caption</a>
                 </div>
