--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
                 <div id="img-caption">
                     <a>image caption</a>
                 </div>
+                <div id="tribute-info">
+                    <ul>
+                        <li>diam maecenas ultricies mi eget</li>
+                        <li>eget duis at tellus at</li>
+                        <li>ornare suspendisse sed nisi lacus</li>
+                    </ul>
+                </div>
             </div>
         </main>
     </body>
