--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                         <li>eget duis at tellus at</li>
                         <li>ornare suspendisse sed nisi lacus</li>
                     </ul>
+                    <a id="tribute-link" href="https://loremipsum.io" target="_blank">more info</a>
                 </div>
             </div>
         </main>
