--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Tribute Page </title>
     </head>
     <body>
-        <main>
+        <main id="main">
             <h1 id="title">Lorem ipsum</h1>
             <div id="img-div">
                 <img id="image" src="https://dummyimage.com/600x400/000/fff.png&text=+">
