--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <script defer src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"> </script>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="styles.css"/>
         <title>Tribute Page </title>
     </head>
@@ -10,10 +11,11 @@
         <main id="main">
             <h1 id="title">Lorem ipsum</h1>
             <div id="img-div">
-                <img id="image" src="https://dummyimage.com/600x400/000/fff.png&text=+">
+                <img id="image" src="https://dummyimage.com/600x400/000/fff.png&text=image">
                 <div id="img-caption">
                     <a>image caption</a>
                 </div>
+            </div>
                 <div id="tribute-info">
                     <ul>
                         <li>diam maecenas ultricies mi eget</li>
@@ -22,7 +24,7 @@
                     </ul>
                     <a id="tribute-link" href="https://loremipsum.io" target="_blank">more info</a>
                 </div>
-            </div>
+            
         </main>
     </body>
 </html> 
