--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                         <li>diam maecenas ultricies mi eget</li>
                         <li>eget duis at tellus at</li>
                         <li>ornare suspendisse sed nisi lacus</li>
+                        <li>diam maecenas ultricies mi eget</li>
+                        <li>eget duis at tellus at</li>
+                        <li>ornare suspendisse sed nisi lacus</li>
                     </ul>
                     <a id="tribute-link" href="https://loremipsum.io" target="_blank">more info</a>
                 </div>
